# sine-interpolation

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Val1.txt  oscillator.h  sine.c
include/dzsungel/synth/: MidiPreprocessor.hpp  SynthVoice.hpp  VoiceManager.hpp
include/phase-mod-demo/: adsr.h  wav.h  wavetablegen.h
include/phase-mod-demo/dsp/: adsr.h  oscillator.h  wavetablegen.h
include/phase-mod-demo/io/: wav.h
include/phase-mod-demo/synth/: MidiPreprocessor.hpp  SynthVoice.hpp  VoiceManager.hpp  mixer.h  voice.h
proof-of-concept/: blSaw.py  triangle.py
src/: adsr.c  main-fixed.c  main-fpu.c  new-main.cpp  oscillator.c  sine-fixed.c  sine-fpu.c  sine.c  wav.c  wavetablegen.c
src/dsp/: adsr.c  oscillator.c  wavetablegen.c
src/io/: wav.c
src/synth/: MidiPreprocessor.cpp  SynthVoice.cpp  VoiceManager.cpp  mixer.c  mixer.cpp  voice.c  voice.cpp
